--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>springcloud-provider-payment8002</module>
+        <module>springcloud-provider-payment8004</module>
+        <module>springcloud-provider-hystrix-payment8001</module>
+        <module>springcloud-consumer-feign-order80</module>
+        <module>springcloud-consumer-feign-hystrix-order80</module>
+        <module>cloud-gateway-gateway9527</module>
     </modules>
     <packaging>pom</packaging>
 
