--- a/springcloud-provider-payment8002/src/main/resources/application.yml
+++ b/springcloud-provider-payment8002/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://10.196.83.80:3307/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    #    url: jdbc:mysql://10.196.83.80:3307/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3307/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
 
