--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
         <module>springcloud-consumer-feign-order80</module>
         <module>springcloud-consumer-feign-hystrix-order80</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>cloud-config-center-3344</module>
+        <module>cloud-config-client-3355</module>
+        <module>cloud-config-client-3366</module>
+        <module>cloud-stream-rabbitmq-provider8801</module>
+        <module>cloud-stream-rabbitmq-consumer8802</module>
     </modules>
     <packaging>pom</packaging>
 
