--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <module>cloud-config-client-3366</module>
         <module>cloud-stream-rabbitmq-provider8801</module>
         <module>cloud-stream-rabbitmq-consumer8802</module>
+        <module>cloudalibaba-provider-payment9001</module>
+        <module>cloudalibaba-provider-payment9002</module>
+        <module>cloudalibaba-consumer-nacos-order8383</module>
     </modules>
     <packaging>pom</packaging>
 
