--- a/cloudalibaba-config-nacos-client-3377/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-config-nacos-client-3377/src/main/resources/bootstrap.yml
@@ -7,16 +7,18 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848  #Nacos服务注册中心地址
+        #        server-addr: localhost:8848  #Nacos服务注册中心地址
+        server-addr: @baseIp@:80  #nginx地址
       config:
-        server-addr: localhost:8848  #Nacos作为配置中心地址
+        #        server-addr: localhost:8848  #Nacos作为配置中心地址
+        server-addr: @baseIp@:80  #nginx地址
         file-extension: yaml #指定yaml格式的配置
         namespace: @nacosNamespace@
         group: @nacosGroup@
         #        namespace: aa0828b7-9470-4b30-a387-5f795528e1af
         #        group: nacos-group-dev
-        username: @nacosUsername@
-        password: @nacosPassword@
+#        username: @nacosUsername@
+#        password: @nacosPassword@
 #        namespace: 7a901d46-e75e-4e6a-b186-5980cca4249b
 
 # data_id = ${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
