--- a/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
+++ b/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: @baseIp@:80 #Nacos服务注册中心地址
+        server-addr: @nginxIP@:80 #Nacos服务注册中心地址
     sentinel:
       transport:
-        dashboard: @baseIp@:@sentinelIp@ #配置Sentinel dashboard地址
+        dashboard: @baseIp@:@sentinelPort@ #配置Sentinel dashboard地址
         port: 8719
         clientIp: docker.for.mac.host.internal
 #      datasource:
