--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
             <!--开发环境-->
             <id>dev</id>
             <properties>
+                <docker0>172.17.0.1</docker0>
                 <baseIp>10.195.27.180</baseIp>
                 <sentinelPort>58080</sentinelPort>
                 <nginxIP>10.195.27.180</nginxIP>
@@ -155,7 +156,9 @@
             <!-- 以下属性用于 bootstrap.yml 文件中 可通过 @activatedProperties@ 获取配置的变量-->
             <properties>
                 <baseIp>172.20.10.2</baseIp>
-                <sentinelIp>58080</sentinelIp>
+                <sentinelPort>58080</sentinelPort>
+                <nginxIP>10.195.27.180</nginxIP>
+                <docker0>docker.for.mac.host.internal</docker0>
             </properties>
         </profile>
     </profiles>
