--- a/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
+++ b/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: @nginxIP@:80 #Nacos服务注册中心地址
+        server-addr: @ubuntuServerIP@:80 #Nacos服务注册中心地址
     sentinel:
       transport:
         dashboard: @baseIp@:@sentinelPort@ #配置Sentinel dashboard地址
