--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
         <module>cloudalibaba-provider-payment9003</module>
         <module>cloudalibaba-provider-payment9004</module>
         <module>cloudalibaba-consumer-nacos-order84</module>
+        <module>seata-account-service2003</module>
+        <module>seata-order-service2001</module>
+        <module>seata-storage-service2002</module>
     </modules>
     <packaging>pom</packaging>
 
