--- a/springcloud-api-commons/pom.xml
+++ b/springcloud-api-commons/pom.xml
@@ -20,7 +20,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>${lombok.version}</version>
+            <!--            <optional>true</optional>-->
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
